Table One and other Graphical Summary Lecture

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .Ruserdata
 Lecture_potential_outcomes_intro_cache/
 Lecture_potential_outcomes_intro_files/
+Rexample_TableOne_SMD_cache/
+Rexample_TableOne_SMD_files/
