Bootstrap lecture and misc changes

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Lecture_potential_outcomes_intro_cache/
 Lecture_potential_outcomes_intro_files/
 Rexample_TableOne_SMD_cache/
 Rexample_TableOne_SMD_files/
+Lecture_bootstrap_cache/
+Lecture_bootstrap_files/
