Theory basics lecture added

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Rexample_TableOne_SMD_cache/
 Rexample_TableOne_SMD_files/
 Lecture_bootstrap_cache/
 Lecture_bootstrap_files/
+Lecture_theory_basics_cache/
+Lecture_theory_basics_files/
