Slides for regression adjustment and flexible regression methods

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ Lecture_bootstrap_cache/
 Lecture_bootstrap_files/
 Lecture_theory_basics_cache/
 Lecture_theory_basics_files/
+Lecture_regression_adjustment_cache/
+Lecture_regression_adjustment_files/
+Rexample_flexible_regression_cache/
+Rexample_flexible_regression_files/
+.Rdata
