Propensity score lecture updated

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,6 @@ Lecture_regression_adjustment_cache/
 Lecture_regression_adjustment_files/
 Rexample_flexible_regression_cache/
 Rexample_flexible_regression_files/
+Lecture_propensity_score_cache/
+Lecture_propensity_score_files/
 .Rdata
