--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,8 @@ Rexample_flexible_regression_cache/
 Rexample_flexible_regression_files/
 Lecture_propensity_score_cache/
 Lecture_propensity_score_files/
+Lecture_augmented_ipw_cache/
+Lecture_augmented_ipw_files/
+Rexample_covariate_overlap_cache/
+Rexample_covariate_overlap_files/
 .Rdata
