small change in matching slides

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@ Lecture_augmented_ipw_cache/
 Lecture_augmented_ipw_files/
 Rexample_covariate_overlap_cache/
 Rexample_covariate_overlap_files/
+Lecture_matching_cache/
+Lecture_matching_files/
 .Rdata
